
syntax = "proto3";

package pb;

import "money.proto";
import "product.proto";
import "shipping.proto";

option go_package = "github.com/Arthur199212/microservices-demo/src/pb";

message Order {
  string transactionId = 1;
  Shipping shipping = 2;
  repeated OrderItem items = 3;
}

message OrderItem {
  Product product = 1;
  Money cost = 2;
}
